# cvc5

./: .cproject  .project  Makefile.builds.in
.devcontainer/: Dockerfile  devcontainer.json  docker-entrypoint.sh  entrypoint.sh
contrib/: get-antlr-3.4
src/: Makefile.am
src/expr/: node.h
src/mcsat/: Makefile.am  bcp_engine.cpp  bcp_engine.h  inner_class.h  mcsat.cpp  mcsat.h  options  solver.cpp  solver.h  solver_trail.cpp  solver_trail.h  watch_list_manager.cpp  watch_list_manager.h
src/mcsat/bcp/: bcp_engine.cpp  bcp_engine.h  watch_list_manager.cpp  watch_list_manager.h
src/mcsat/clause/: clause.cpp  clause.h  clause_db.cpp  clause_db.h  clause_ref.cpp  clause_ref.h  literal.h  literal_table.h
src/mcsat/cnf/: Makefile.am  cnf_plugin.cpp  cnf_plugin.h  cnf_stream.cpp  cnf_stream.h  tseitin_cnf_stream.cpp  tseitin_cnf_stream.h
src/mcsat/fm/: Makefile.am  assigned_watch_manager.h  bounds_model.cpp  bounds_model.h  fm_plugin.cpp  fm_plugin.h  fm_plugin_types.cpp  fm_plugin_types.h  linear_constraint.cpp  linear_constraint.h
src/mcsat/main/: Makefile.am  mcsat.cpp
src/mcsat/plugin/: Makefile.am  solver_plugin.cpp  solver_plugin.h  solver_plugin_factory.cpp  solver_plugin_factory.h  solver_plugin_features.cpp  solver_plugin_features.h  solver_plugin_notify.cpp  solver_plugin_notify.h  solver_plugin_registry.h
src/mcsat/rules/: Makefile.am  ackermann_rule.cpp  ackermann_rule.h  fourier_motzkin_rule.cpp  fourier_motzkin_rule.h  input_clause_rule.cpp  input_clause_rule.h  proof_rule.cpp  proof_rule.h  resolution_rule.cpp  resolution_rule.h
src/mcsat/uf/: uf_plugin.cpp
src/mcsat/util/: Makefile.am  assigned_watch_manager.cpp  assigned_watch_manager.h  var_priority_queue.cpp  var_priority_queue.h
src/mcsat/variable/: variable.cpp  variable.h  variable_db.cpp  variable_db.h  variable_table.h
src/options/: Makefile.am
src/prop/: prop_engine.cpp  prop_engine.h
src/smt/: smt_engine.cpp
src/util/: Makefile.am  selective_skolemization.cpp  selective_skolemization.h
(+1 files in other folders)
